<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAC459">

    <EditText
        android:id="@+id/updateAddress"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="street name, city, state, ZIP"
        android:inputType="textPostalAddress"
        android:textColorLink="#040404"
        app:layout_constraintBottom_toTopOf="@+id/updateRelation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/updateLastN"
        android:layout_width="208dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="35dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="lastname"
        android:inputType="textPersonName"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateFirstN"
        android:layout_width="208dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="35dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hapticFeedbackEnabled="false"
        android:hint="firstname"
        android:inputType="textPersonName"
        android:shadowColor="#F6CFCF"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateRelation"
        android:layout_width="208dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="35dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hapticFeedbackEnabled="false"
        android:hint="name"
        android:inputType="textPersonName"
        android:shadowColor="#F6CFCF"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="328dp"
        android:text="@string/address"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="228dp"
        android:text="@string/first_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="276dp"
        android:text="@string/last_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="327dp"
        android:text="Relation to:"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/upDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="156dp"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="158dp"
        android:text="Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backToM"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>